--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -22,6 +22,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-align: right;
 }
+// Page transition effect
+.fade-slide-enter-active, .fade-slide-leave-active {
+  transition: all 0.5s ease;
+}
+
+.fade-slide-enter-from {
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.fade-slide-leave-to {
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
 
 // ====================
 // Toastification Styles
